# graphrag-travel-qa

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.yaml
data/eval/: complex_queries.jsonl  general_queries.jsonl
data/raw/: sample_travel_rules.md
experiments/: error_analysis.py  eval_bucketed.py  grid_search_chunking.py  retrieval_ablation.py
scripts/: build_index.py  run_eval.py
src/api/: main.py  routes.py  schemas.py
src/chunking/: __init__.py  overlap_window.py  semantic_splitter.py
src/generation/: __init__.py  confidence_gate.py  evidence_constrained.py
src/indexing/: __init__.py  bm25_index.py  faiss_index.py  graph_builder.py
src/pipeline/: __init__.py  rag_pipeline.py
src/retrieval/: __init__.py  cross_encoder_reranker.py  dense_retriever.py  graph_expander.py  hybrid_retriever.py  sparse_retriever.py
tests/: test_chunking.py  test_graph.py  test_pipeline.py  test_retrieval.py
