[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-travel-qa"
version = "0.1.0"
description = "GraphRAG驱动的出行知识问答系统"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "networkx>=3.3",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
